--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <app-cockpit
+  (srvCreated)="onServerAdded($event)"
+  (blpCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
