--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -1,16 +1,16 @@
 <div class="row">
     <div class="col-xs-12">
-      <p>Add new Servers or blueprints!</p>
-      <label>Server Name: {{newServerName}}</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerName">
+      <p style="color: darkgreen"><em>Add new Servers or blueprints!</em></p>
+      <label>Server Name: {{serverNameInput.value}}</label>
+      <input type="text" class="form-control" #serverNameInput>
       <label>Server Content: {{newServerContent}}</label>
       <input type="text" class="form-control" [(ngModel)]="newServerContent">
       <br>
       <button
         class="btn btn-primary"
-        (click)="onAddServer()">Add Server</button>
+        (click)="onAddServer(serverNameInput)">Add Server</button> &nbsp;
       <button
         class="btn btn-primary"
-        (click)="onAddBlueprint()">Add Server Blueprint</button>
+        (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint</button>
     </div>
 </div>
