--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -3,8 +3,8 @@
       <p style="color: darkgreen"><em>Add new Servers or blueprints!</em></p>
       <label>Server Name: {{serverNameInput.value}}</label>
       <input type="text" class="form-control" #serverNameInput>
-      <label>Server Content: {{newServerContent}}</label>
-      <input type="text" class="form-control" [(ngModel)]="newServerContent">
+      <label>Server Content: {{serverContentInput.value}}</label>
+      <input type="text" class="form-control" #serverContentInput>
       <br>
       <button
         class="btn btn-primary"
