--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12">
       <p style="color: darkgreen"><em>Add new Servers or blueprints!</em></p>
-      <label>Server Name: {{serverNameInput.value}}</label>
+      <label>Server Name</label>
       <input type="text" class="form-control" #serverNameInput>
-      <label>Server Content: {{serverContentInput.value}}</label>
+      <label>Server Content</label>
       <input type="text" class="form-control" #serverContentInput>
       <br>
       <button
