basic alttribute directive with green  background color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,12 @@
   <hr>
   <div class="row">
     <div class="col-xs-12">
+      <app-test-dir></app-test-dir>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12">
       <app-server-element 
       *ngFor="let serverElement of serverElements"
       [srvElement]="serverElement">
