renderer2 is used for better style

--- a/src/app/test-dir/test-dir.component.html
+++ b/src/app/test-dir/test-dir.component.html
@@ -4,8 +4,10 @@
 <div [ngStyle]="{'color': 'blue', 'font-size': '24px', 'font-weight': 'bold'}">
     style using ngStyle
 </div>
-
 <div appBasicHighlight>
     Styled using basic highlight directive
+</div>
+<div appBetterHighlight>
+    Styled using Better highlight directive
 </div>
 
