getting color output from outside using Input decorator

--- a/src/app/test-dir/test-dir.component.html
+++ b/src/app/test-dir/test-dir.component.html
@@ -7,7 +7,7 @@
 <div appBasicHighlight>
     Styled using basic highlight directive
 </div>
-<div appBetterHighlight>
+<div [appBetterHighlight]="'lightgreen'" [defaultColor]="'yellow'">
     Styled using Better highlight directive
 </div>
 
